# Modtran

./: .gitignore  README.md
data/: refbkg
reference/: CMakeLists.txt  UFTAPX.asc  bmtran.f  d1mach.f  dpdisort.f  dplinpak.f  driver.server.f  makefile  mktape5.f  modtran3.1.f  modtran3.2.f  modtran3.f  parameter.list  stdmdl.f
